# wiseby-design-store

./: .gitignore  README.md  pyproject.toml  requirments.txt  site.settings.template.toml  site.settings.toml  store.ini  store.service  wsgi.py
store/: __init__.py  auth.py  block.py  blog.py  db.py  images.py  media.py  news.py  product.py  schema.sql
store/models/: blog.py  product.py
store/static/: style.css
store/templates/: base.html  footer.html  header.html
store/templates/block/: index.html
store/templates/blog/: create.html  detail.html  index.html
store/templates/media/: index.html  update.html
store/templates/news/: index.html
store/templates/product/: create.html  details.html  index.html  update.html
store/tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
